# Pinakas

./: .gitattributes  .gitignore  CMakeLists.txt  Pinakas.code-workspace  README.md  to do.txt
backup/: Pinakas-backup.cpp  Pinakas-backup.hpp
dev/lpc/: levinson_durbin.m  lpc_tests.m  lpc_tests.py
documentation/: div.md  resample.md
example/: Nimata.hpp  main.cpp
include/: Chronometro.hpp  Intrinsics.hpp  Parallilos.hpp  Pinakas.cpp  Pinakas.hpp  backup.cpp  iterators.cpp  matrix.cpp  matrix.hpp  mudelizer.cpp  mudelizer.hpp
octave/: fasterdiv.m  mudelizer.hpp  octave.m  test.m
octave/lpc stuff/: testing.m
octave/resample/: cconv.m  ellper.m  resample.m  resample_test.m  tests.m
octave/resampling/: blackman.m  linearize.m  pinakas_resample.m  pinakas_resample2.m  resample.m  resample_test.m  upsample.m
random/: div.m  fastdiv.m  mudelizer.cpp  newton.m  octave.m
random/resample/: cconv.m  resample.m  resample2.m  resample3.m  resample_test.m
random/sowb/: matrix.cpp  matrix.h  mslice.cpp  mslice.h  usage-example.cpp
reference/Modified Gram-Schmidt procedure - Tom Trogdon/: Lecture23.html  MATH 105A [Fall 2016].url
reference/Modified Gram-Schmidt procedure - Tom Trogdon/Lecture23_files/: c7fa7451-6f95-4815-ac32-b8cc2537837a
src/: Pinakas.cpp  fft.cpp  tests.cpp
src/output/: .data  analysis.txt  blackman.data  test.data
test/: gpt.cpp  hh.cpp  main.cpp  mine_new.cpp  mine_old.cpp  misc.cpp  octave.m  old_test.cpp  test.cpp
testing/: addition.cpp  multiplication.cpp  substraction.cpp
